# scrapper_ali

./: .env  .gitignore  README.md  ali_scraper.py  app.py  pyproject.toml  requirements.txt  setup.py  setup_aliexpress_selenium.ps1  structure.txt
.github/workflows/: python-app.yml
scraper/: ali_scraper.py
src/ali_scraper/: __init__.py  ali_scraper.py  app.py  config.py
test/: test_scraper.py
tests/: test_scraper.py
